package handlers

import (
	"net/http"

	"github.com/gin-gonic/gin"
)

// HealthCheck handler for health checks
func HealthCheck(c *gin.Context) {
	c.JSON(http.StatusOK, gin.H{
		"status": "ok",
	})
}

// Login handler
func Login(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the user service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "login endpoint",
	})
}

// Register handler
func Register(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the user service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "register endpoint",
	})
}

// RefreshToken handler
func RefreshToken(c *gin.Context) {
	// This is just a stub - in a real implementation, this would validate the refresh token and issue a new access token
	c.JSON(http.StatusOK, gin.H{
		"message": "refresh token endpoint",
	})
}

// GetUserProfile handler
func GetUserProfile(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the user service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "get user profile endpoint",
	})
}

// UpdateUserProfile handler
func UpdateUserProfile(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the user service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "update user profile endpoint",
	})
}

// ListProducts handler
func ListProducts(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the product service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "list products endpoint",
	})
}

// GetProduct handler
func GetProduct(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the product service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message":   "get product endpoint",
		"productId": c.Param("id"),
	})
}

// CreateProduct handler
func CreateProduct(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the product service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "create product endpoint",
	})
}

// UpdateProduct handler
func UpdateProduct(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the product service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message":   "update product endpoint",
		"productId": c.Param("id"),
	})
}

// DeleteProduct handler
func DeleteProduct(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the product service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message":   "delete product endpoint",
		"productId": c.Param("id"),
	})
}

// CreatePayment handler
func CreatePayment(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the payment service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "create payment endpoint",
	})
}

// GetPayment handler
func GetPayment(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the payment service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message":   "get payment endpoint",
		"paymentId": c.Param("id"),
	})
}

// GetPaymentHistory handler
func GetPaymentHistory(c *gin.Context) {
	// This is just a stub - in a real implementation, this would call the payment service via gRPC
	c.JSON(http.StatusOK, gin.H{
		"message": "get payment history endpoint",
	})
}
